--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -333,15 +333,15 @@
                                     </div>
                                     <div class="form-group">
                                         <label >等级</label>
-                                        <p></p>
+                                        <p id="level"></p>
                                     </div>
                                     <div class="form-group">
                                         <label >积分</label>
-                                        <p></p>
+                                        <p id="point"></p>
                                     </div>
                                     <div class="form-group">
-                                        <label >身份</label>
-                                        <p></p>
+                                        <label>身份</label>
+                                        <p  id="identity"></p>
                                     </div>
                                     <div class="form-check">
                                         <!--<input type="checkbox" class="form-check-input" id="exampleCheck1">-->
