--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -642,7 +642,7 @@
     <!-- /.content-wrapper -->
 
     <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
+    <aside>
         <!-- Control sidebar content goes here -->
         <div class="p-3">
             <h5>购物车</h5>
